New files added - [CXAdmin.css,Support.css,servicedef.xml,MunicipalityAdministration.js,MunicipalityAdministration.variables.json,MunicipalityAdministration.css,CXAdmin.variables.json,MyMunicipality.html,MyMunicipality.js,Support.variables.json,NewFrom.html,CXAdmin.html,general-options.json,MyMunicipality.variables.json,MyCart.variables.json,NewFrom.js,DataEntry.variables.json,MyProfile.js,NewFrom.variables.json,MyCart.css,MyProfile.html,MyMunicipality.css,MyProfile.variables.json,database-options.json,MyCart.html,NewFrom.css,CXAdmin.js,Support.js,DataEntry.html,MyProfile.css,roles.json,securityService.spring.xml,MyCart.js,Support.html,intercept-urls.json,MunicipalityAdministration.html,DataEntry.css,DataEntry.js,CXAdmin,Support,MunicipalityAdministration,MyMunicipality,NewFrom,MyCart,DataEntry,MyProfile] Files modified - [MunicipalitiesController.java,Municipalities.java,Gisrecords.java,leftnav.html,pages-config.json,cx2_published_dataModel.json,FormTypesServiceImpl.java,project-services.xml,project-security-provider.xml,app.variables.json,Users.java,Login.html,servicedef.xml,topnav.html,pom.xml,index.html,MunicipalitiesServiceImpl.java,UsersServiceImpl.java,db-connection-settings.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -1,22 +1,25 @@
 <wm-partial data-ng-controller="leftnavPageController" name="leftnav" type="leftnav">
-    <wm-nav name="leftnavigation" type="pills" layout="stacked">
+    <wm-nav name="DevDataEntry" type="pills" layout="stacked">
         <wm-nav-item name="list_dashboard">
-            <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-bar-graph"></wm-anchor>
+            <wm-anchor caption="My Dashboard" name="dashboardLink" iconclass="wi wi-bar-graph" on-click="Variables.goToPage_Main.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_order">
-            <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-windows"></wm-anchor>
+            <wm-anchor caption="My Municipality" name="orderLink" iconclass="wi wi-windows" on-click="Variables.goToPage_MyMunicipality.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_inventory">
-            <wm-anchor caption="Municipality Administration" name="inventoryLink" iconclass="wi wi-control-point"></wm-anchor>
+            <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-control-point" on-click="Variables.goToPage_MunicipalityAdministration.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_support">
-            <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add"></wm-anchor>
+            <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" on-click="Variables.goToPage_NewFrom.invoke()"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
-            <wm-anchor name="anchor5" iconclass="wi wi-person" caption="CX Admin"></wm-anchor>
+            <wm-anchor name="anchor5" iconclass="wi wi-person" caption="CX Admin" on-click="Variables.goToPage_CXAdmin.invoke()" accessroles="CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item6">
-            <wm-anchor name="anchor6" iconclass="wi wi-phone" caption="Support"></wm-anchor>
+            <wm-anchor name="anchor6" iconclass="wi wi-phone" caption="Support" on-click="Variables.goToPage_Support.invoke()"></wm-anchor>
+        </wm-nav-item>
+        <wm-nav-item name="nav_item7">
+            <wm-anchor name="anchor7" iconclass="wi wi-file" caption="DevDataEntry" on-click="Variables.goToPage_DataEntry.invoke()"></wm-anchor>
         </wm-nav-item>
     </wm-nav>
 </wm-partial>
