--- a/src/main/webapp/pages/Login/Login.html
+++ b/src/main/webapp/pages/Login/Login.html
@@ -51,6 +51,11 @@
                                                 <wm-button type="submit" caption="Login" width="100%" class="app-login-button btn-primary" name="loginButton" fontsize="1.2" fontunit="em"></wm-button>
                                             </wm-gridcolumn>
                                         </wm-gridrow>
+                                        <wm-gridrow name="gridrow8">
+                                            <wm-gridcolumn columnwidth="12" name="gridcolumn11" horizontalalign="right">
+                                                <wm-anchor margin="1em 0.5em" name="anchor2" caption="SignUp" fontweight="bold" on-click="Variables.goToPage_UserCreation.invoke()"></wm-anchor>
+                                            </wm-gridcolumn>
+                                        </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-login>
                             </wm-container>
