New files added - [] Files modified - [UserCreation.js,ManageGISData.variables.json,app.css,header.html,ManageGISData.html,UserCreation.variables.json,intercept-urls.json,project-security-provider.xml] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/header/header.html
+++ b/src/main/webapp/pages/header/header.html
@@ -1,8 +1,8 @@
 <wm-partial data-ng-controller="headerPageController" name="header" type="header">
     <wm-layoutgrid name="headerlayout">
         <wm-gridrow name="headerrow">
-            <wm-gridcolumn name="headerleft" verticalalign="middle" columnwidth="7">
-                <wm-picture picturesource="resources/images/imagelists/CX-Logo.png" name="AppLogo" margin="unset unset unset 5px" width="15%" pictureaspect="None"></wm-picture>
+            <wm-gridcolumn name="headerleft" verticalalign="middle" columnwidth="7" padding="5px unset unset unset">
+                <wm-picture picturesource="resources/images/imagelists/CX-Logo.png" name="AppLogo" pictureaspect="None"></wm-picture>
                 <wm-label caption="CivicXpress" name="AppName" fontsize="30" fontweight="bold" color="#2d2b3e"></wm-label>
             </wm-gridcolumn>
             <wm-gridcolumn name="headerright" horizontalalign="right" verticalalign="middle" columnwidth="5" padding="1em 1em unset unset"></wm-gridcolumn>
